# libva-utils

./: .travis.yml  Android.bp  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  style_unify
.github/workflows/: freebsd.yml  ubuntu.yml  windows.yml
common/: Makefile.am  loadsurface.c  loadsurface.h  loadsurface_yuv.h  meson.build  va_display.c  va_display.h  va_display_android.cpp  va_display_drm.c  va_display_wayland.c  va_display_win32.c  va_display_win32.cpp  va_display_x11.c
debian.upstream/: Makefile.am  README.Debian  changelog.in  control.in
decode/: Android.mk  Makefile.am  avcstreamoutdemo.cpp  loadjpeg.c  meson.build  mpeg2vldemo.cpp  test_surface.cpp  test_va_endpicture2.cpp  tinyjpeg-internal.h  tinyjpeg.c  tinyjpeg.h  vacopysharedsurface.cpp
encode/: Android.mk  Makefile.am  av1encode.c  av1encode.h  avcenc.c  h264encode.c  hevcencode.c  jpegenc.c  jpegenc_utils.h  meson.build  mpeg2vaenc.c  rate_control_interface.cc  rate_control_interface.h  svctenc.c  test_av1.sh  test_h264.sh  test_hevc.sh  vp8enc.c  vp9enc.c
encode/libmebo/: AV1RateControlHandler.hpp  LibMeboControlHandler.hpp  RateControlFactory.hpp  VP8RateControlHandler.hpp  VP9RateControlHandler.hpp  libmebo.hpp  libmebo_interface.cc  libmebo_interface.h
encode/rate_control/lib_header/: aom_codec.h  ratectrl.h  ratectrl_rtc.h
encode/rate_control/lib_header/aom/: aom_decoder.h  aom_encoder.h  aom_frame_buffer.h  aom_image.h  aom_mem.h
encode/rate_control/lib_header/aom/aom_dsp/: aom_dsp_common.h  aom_filter.h  entcode.h  grain_params.h  grain_table.h  odintrin.h  prob.h  pyramid.h  rect.h  txfm_common.h
encode/rate_control/lib_header/aom/aom_dsp/flow_estimation/: corner_detect.h  flow_estimation.h
encode/rate_control/lib_header/aom/aom_ports/: bitops.h  mem.h
encode/rate_control/lib_header/aom/aom_scale/: yv12config.h
encode/rate_control/lib_header/aom/aom_util/: aom_thread.h  debug_util.h  endian_inl.h
encode/rate_control/lib_header/aom/common/: args_helper.h
encode/rate_control/lib_header/aom/config/: aom_config.h  av1_rtcd.h
encode/rate_control/lib_header/aom/internal/: aom_codec_internal.h  aom_image_internal.h
encode/rate_control/lib_header/av1/common/: alloccommon.h  av1_common_int.h  av1_loopfilter.h  av1_txfm.h  blockd.h  common.h  common_data.h  convolve.h  entropy.h  entropymode.h  entropymv.h  enums.h  filter.h  frame_buffers.h  mv.h  quant_common.h  restoration.h  scale.h  seg_common.h  tile_common.h  timing.h
getopt/: meson.build
putsurface/: Makefile.am  meson.build  putsurface_common.c  putsurface_wayland.c  putsurface_x11.c
subprojects/: DirectX-Headers.wrap
test/: Makefile.am  compat_win32.h  meson.build  test.h  test_data.h  test_defs.h  test_internal.cpp  test_streamable.h  test_utils.h  test_va_api_config_attribs.cpp  test_va_api_config_attribs.h  test_va_api_create_image.cpp  test_va_api_create_image.h  test_va_api_createbuffer.cpp  test_va_api_createbuffer.h  test_va_api_createcontext.cpp  test_va_api_createcontext.h  test_va_api_createsurfaces.cpp  test_va_api_createsurfaces.h  test_va_api_deriveimage.cpp  test_va_api_deriveimage.h  test_va_api_display_attribs.cpp  test_va_api_display_attribs.h  test_va_api_fixture.cpp  test_va_api_fixture.h  test_va_api_get_create_config.cpp  test_va_api_get_create_config.h  test_va_api_get_max_values.cpp  test_va_api_get_max_values.h  test_va_api_getimage.cpp  test_va_api_getimage.h  test_va_api_init_terminate.cpp  test_va_api_init_terminate.h  test_va_api_putimage.cpp  test_va_api_putimage.h  test_va_api_query_config.cpp  test_va_api_query_config.h  test_va_api_query_imageformat.cpp  test_va_api_query_imageformat.h  test_va_api_query_subpicformat.cpp  (+4 more)
tracetool/: README.md  callStack.py  core.py  dataParser.py  drawQueue.py  main.py  manifest.py  statistic.py  util.py  version.py  writeUI.py
tracetool/manifests/: Intel-Media-Open.json  libva_trace.man
tracetool/modules/: ftrace.py  i915.py  iHD.py  libva.py  surface.py
tracetool/test/: __init__.py  test_callStack.py  test_core.py  test_dataParser.py  test_drawQueue.py  test_ftrace.py  test_i915.py  test_media.py  test_surface.py
vainfo/: Android.mk  Makefile.am  meson.build  vainfo.c
videoprocess/: Android.mk  Makefile.am  README.md  meson.build  process.cfg.template  process_1dlut_3dlut.cfg.template  process_3dlut.cfg.template  process_blending.cfg.template  process_chromasitting.cfg.template  process_csc_vaCreateImage.cfg.template  process_denoise.cfg.template  process_hdr_tm_h2h.cfg.template  process_hdr_tm_h2s.cfg.template  process_hvsdenoise.cfg.template  process_procAmp.cfg.template  process_procAmp_sharpness.cfg.template  process_pvc_mmc.cfg.template  process_rotation.cfg.template  process_scaling_csc.cfg.template  process_scaling_n_out_usrptr.cfg.template  process_sharpness.cfg.template  process_va_copy.cfg.template  vacopy.cpp  vavpp.cpp  vpp3dlut.cpp  vpp_pvc_mmc.cpp  vppblending.cpp  vppchromasitting.c  vppchromasitting.cpp  vppcsc_vaCreateImage.cpp  vppdenoise.cpp  vpphdr10plus.cpp  vpphdr_tm.cpp  vpphvsdenoise.cpp  vppprocAmp.cpp  vppprocAmp_sharpness.cpp  vppscaling.c  vppscaling_csc.cpp  vppscaling_n_out_usrptr.cpp  vppsharpness.cpp
