option('drm',
       type : 'combo',
       value : 'auto',
       choices: [ 'auto', 'true', 'false' ])
option('x11',
       type : 'combo',
       value : 'auto',
       choices: [ 'auto', 'true', 'false' ])
option('wayland',
       type : 'combo',
       value : 'auto',
       choices: [ 'auto', 'true', 'false' ])
option('win32',
       type : 'combo',
       value : 'auto',
       choices: [ 'auto', 'true', 'false' ])
option('tests',
       type : 'boolean',
       value : false)
option ('mebo', type: 'feature', value: 'enabled',
         description: 'Enable LibMebo library support')

option ('aom_av1_rc', type: 'feature', value: 'enabled',
         description: 'Enable AV1 software BRC from AOM library')

option ('brc', type: 'feature', value: 'enabled',
         description: 'Enable brc to support libmebo library ')

option ('brc_controller', type: 'feature', value: 'enabled',
         description: 'Enable brc_controller to support libmebo')
