executable('mpeg2vldemo', [ 'mpeg2vldemo.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('test_surface', [ 'test_surface.cpp' ],
           dependencies: libva_display_dep,
           install: true)
executable('loadjpeg', [ 'loadjpeg.c', 'tinyjpeg.c' ],
           dependencies: libva_display_dep,
           install: true)
